--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -52,6 +52,7 @@ jobs:
         uses: codecov/test-results-action@v1
         with:
           env_vars: OS,PYTHON_VERSION,PYDANTIC_VERSION
+          files: ./tests/junit.xml
           flags: unittests
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
