--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,13 +34,13 @@ loguru = ">=0.6.0,<1.0.0"
 python-dotenv = ">=0.21.0,<2.0.0"
 typing-extensions = ">=4.4.0,<5.0.0"
 tomli = { version = "^2.0.1", python = "<3.11" }
-pydantic = ">=1.10.0,<3.0.0,!=2.5.0,!=2.5.1,!=2.10.0"
+pydantic = ">=1.10.0,<3.0.0,!=2.5.0,!=2.5.1,!=2.10.0,!=2.10.1"
 
 websockets = { version = ">=10.0", optional = true }
 Quart = { version = ">=0.18.0,<1.0.0", optional = true }
 fastapi = { version = ">=0.93.0,<1.0.0", optional = true }
-aiohttp = { version = "^3.9.0b0", extras = ["speedups"], optional = true }
-httpx = { version = ">=0.20.0,<1.0.0", extras = ["http2"], optional = true }
+aiohttp = { version = "^3.11.0", extras = ["speedups"], optional = true }
+httpx = { version = ">=0.26.0,<1.0.0", extras = ["http2"], optional = true }
 uvicorn = { version = ">=0.20.0,<1.0.0", extras = [
   "standard",
 ], optional = true }
