:memo: 发布议题模板现在增加专门的 Publish 标签

--- a/.github/ISSUE_TEMPLATE/adapter_publish.yml
+++ b/.github/ISSUE_TEMPLATE/adapter_publish.yml
@@ -1,7 +1,7 @@
 name: 发布适配器
 title: "Adapter: {name}"
 description: 发布适配器到 NoneBot 官方商店
-labels: ["Adapter"]
+labels: ["Adapter", "Publish"]
 body:
   - type: input
     id: name
