--- a/.github/ISSUE_TEMPLATE/bot_publish.yml
+++ b/.github/ISSUE_TEMPLATE/bot_publish.yml
@@ -1,7 +1,7 @@
 name: 发布机器人
 title: "Bot: {name}"
 description: 发布机器人到 NoneBot 官方商店
-labels: ["Bot"]
+labels: ["Bot", "Publish"]
 body:
   - type: input
     id: name
