--- a/assets/plugins.json5
+++ b/assets/plugins.json5
@@ -8097,4 +8097,11 @@
     ],
     "is_official": false
   },
+  {
+    "module_name": "nonebot_plugin_apod",
+    "project_link": "nonebot-plugin-apod",
+    "author_id": 122811297,
+    "tags": [],
+    "is_official": false
+  },
 ]
