:beers: publish bot PickStarsBot (#3272)

--- a/assets/bots.json5
+++ b/assets/bots.json5
@@ -697,4 +697,12 @@
     ],
     "is_official": false
   },
+  {
+    "name": "PickStarsBot",
+    "desc": "欢迎使用PickStarsBot！这是一款基于NoneBot2构建的智能QQ机器人，提供丰富的功能，包括一言、历史上的今天、60秒早报等，快来试试吧！",
+    "author_id": 183461085,
+    "homepage": "https://github.com/PickStars308/PickStarsBot",
+    "tags": [],
+    "is_official": false
+  },
 ]
