:construction_worker: sync pyright version with pylance

--- a/.github/workflows/pyright.yml
+++ b/.github/workflows/pyright.yml
@@ -45,3 +45,5 @@ jobs:
 
       - name: Run Pyright
         uses: jakebailey/pyright-action@v2
+        with:
+          pylance-version: latest-release
